# landscape-architect-portfolio

./: .env.example  .gitignore  CLAUDE.md  DESIGN_SYSTEM.md  Procfile  README.md  README.ru.md  pyproject.toml  railway.json
apps/core/: admin.py  apps.py  models.py  sitemaps.py  tests.py  translation.py  views.py
apps/core/migrations/: 0001_initial.py  0002_sitesettings_logo.py
apps/portfolio/: admin.py  models.py  tests.py  translation.py  urls.py  views.py
apps/portfolio/migrations/: 0001_initial.py
config/: urls.py
config/settings/: base.py  development.py  production.py
locale/en/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
static/css/: main.css
templates/: base.html
templates/components/: _footer.html  _language_switcher.html  _navbar.html
templates/core/: home.html
templates/portfolio/: project_detail.html  project_list.html
